making small updates to logistic regression model.

--- a/model_logistic_regression.ipynb
+++ b/model_logistic_regression.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:00.753300Z",
-     "start_time": "2023-06-06T09:48:59.824185Z"
+     "end_time": "2023-06-07T23:44:00.995443Z",
+     "start_time": "2023-06-07T23:44:00.063668Z"
     }
    },
    "outputs": [],
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:54:24.851656Z",
-     "start_time": "2023-06-06T09:54:24.846172Z"
+     "end_time": "2023-06-07T23:44:01.841432Z",
+     "start_time": "2023-06-07T23:44:00.998374Z"
     }
    },
    "outputs": [],
@@ -56,8 +56,8 @@
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:09.534523Z",
-     "start_time": "2023-06-06T09:49:00.914101Z"
+     "end_time": "2023-06-07T23:44:02.485788Z",
+     "start_time": "2023-06-07T23:44:01.842240Z"
     }
    },
    "outputs": [],
@@ -79,32 +79,36 @@
     "norm_and_one_hot_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (Normalizer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "log_and_ordinal_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (log_transform, make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "power_transforms = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (PowerTransformer(), make_column_selector(dtype_include=\"number\"))\n",
     ")\n",
     "\n",
     "robust_transformation = make_column_transformer(\n",
     "    (OneHotEncoder(), [Columns.CUSTOMER_TYPE]),\n",
     "    (OrdinalEncoder(categories=order_mapping), [Columns.SPECIFIC_HOLIDAY]),\n",
+    "    (\"drop\", [Columns.INFO_PAGE_TIME, Columns.PRODUCT_PAGE_TIME, Columns.GOOGLE_ANALYTICS_ER]),\n",
     "    (RobustScaler(), make_column_selector(dtype_include=\"number\"))\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:09.543509Z",
-     "start_time": "2023-06-06T09:49:09.541256Z"
+     "end_time": "2023-06-07T23:44:02.495802Z",
+     "start_time": "2023-06-07T23:44:02.492719Z"
     }
    }
   },
@@ -122,8 +126,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:09.548146Z",
-     "start_time": "2023-06-06T09:49:09.545968Z"
+     "end_time": "2023-06-07T23:44:02.504273Z",
+     "start_time": "2023-06-07T23:44:02.499763Z"
     }
    }
   },
@@ -141,14 +145,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:09.552237Z",
-     "start_time": "2023-06-06T09:49:09.550872Z"
+     "end_time": "2023-06-07T23:44:02.511581Z",
+     "start_time": "2023-06-07T23:44:02.505251Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "column_transforms_only_model = Pipeline(\n",
@@ -163,14 +167,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:31.452407Z",
-     "start_time": "2023-06-06T09:49:31.448759Z"
+     "end_time": "2023-06-07T23:44:02.518365Z",
+     "start_time": "2023-06-07T23:44:02.510526Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "tune_logistic_regression_penalty = { \"logistic_regression__penalty\": [\"l1\", \"l2\"]}\n",
@@ -249,14 +253,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:32.252063Z",
-     "start_time": "2023-06-06T09:49:32.248106Z"
+     "end_time": "2023-06-07T23:44:02.522707Z",
+     "start_time": "2023-06-07T23:44:02.519230Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
@@ -269,8 +273,11 @@
       "                                                             '0.6', '0.8',\n",
       "                                                             '1']]),\n",
       "                                 ['SpecificHoliday']),\n",
+      "                                ('drop', 'drop',\n",
+      "                                 ['Info_Page_Time', 'ProductPage_Time',\n",
+      "                                  'GoogleAnalytics_ER']),\n",
       "                                ('powertransformer', PowerTransformer(),\n",
-      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x1359c7040>)]),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13eeab070>)]),\n",
       "    'logistic_regression__C': 0.1,\n",
       "    'logistic_regression__class_weight': {0: 0.4, 1: 0.6},\n",
       "    'logistic_regression__penalty': 'l2',\n",
@@ -299,14 +306,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:45.912316Z",
-     "start_time": "2023-06-06T09:49:33.168147Z"
+     "end_time": "2023-06-07T23:44:16.489876Z",
+     "start_time": "2023-06-07T23:44:02.526391Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "final_model_performance_lr = FinalModelPerformance(\n",
@@ -317,21 +324,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:49:52.401678Z",
-     "start_time": "2023-06-06T09:49:52.394800Z"
+     "end_time": "2023-06-07T23:44:16.496012Z",
+     "start_time": "2023-06-07T23:44:16.491187Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.241923\n1                              score_time mean score  0.018467\n2                      5-fold CV F1 Score mean score  0.663270\n3                      5-fold CV Accuracy mean score  0.873719\n4             5-fold CV Balanced Accuracy mean score  0.841874\n5  5-fold CV Matthew's Correlation Coefficient me...  0.600981",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.241923</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.018467</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.663270</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.873719</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.841874</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.600981</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.223249\n1                              score_time mean score  0.016042\n2                      5-fold CV F1 Score mean score  0.663270\n3                      5-fold CV Accuracy mean score  0.873719\n4             5-fold CV Balanced Accuracy mean score  0.841874\n5  5-fold CV Matthew's Correlation Coefficient me...  0.600981",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.223249</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.016042</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.663270</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.873719</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.841874</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.600981</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,21 +349,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:50:07.279594Z",
-     "start_time": "2023-06-06T09:50:05.944875Z"
+     "end_time": "2023-06-07T23:44:17.718958Z",
+     "start_time": "2023-06-07T23:44:16.498258Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "outputs": [
     {
      "data": {
       "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.679330\n1                           Accuracy  0.882425\n2                  Balanced Accuracy  0.776068\n3  Matthew's Correlation Coefficient  0.619154",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.679330</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.882425</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.776068</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.619154</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,20 +374,20 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:50:07.594236Z",
-     "start_time": "2023-06-06T09:50:07.286890Z"
+     "end_time": "2023-06-07T23:44:18.016519Z",
+     "start_time": "2023-06-07T23:44:17.721630Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "outputs": [
     {
      "data": {
       "text/plain": "['./models_exports/logistic_regression_classifier.joblib']"
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,18 +398,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:54:46.180433Z",
-     "start_time": "2023-06-06T09:54:46.151175Z"
+     "end_time": "2023-06-07T23:44:18.031832Z",
+     "start_time": "2023-06-07T23:44:18.018705Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-07T23:44:18.076020Z",
+     "start_time": "2023-06-07T23:44:18.038415Z"
+    }
    }
   }
  ],
