--- a/model_nb_classifier_svc.ipynb
+++ b/model_nb_classifier_svc.ipynb
@@ -367,7 +367,7 @@
    "source": [
     "svc_pipeline = Pipeline(\n",
     "    [(\"column_transformation\", column_transformation_1),\n",
-    "    (\"data_sampling\", smote_oversampling ),\n",
+    "    (\"data_sampling\", smote_oversampling),\n",
     "     ('svc_model',sv_classifier)\n",
     "     ]    \n",
     ")\n",
@@ -514,26 +514,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "outputs": [
     {
-     "data": {
-      "text/plain": "['./models_exports/support_vector_classifier.joblib']"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'dump' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[43mdump\u001B[49m(final_model_evaluation_svc\u001B[38;5;241m.\u001B[39mmodel, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m./models_exports/support_vector_classifier.joblib\u001B[39m\u001B[38;5;124m\"\u001B[39m);\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'dump' is not defined"
+     ]
     }
    ],
    "source": [
     "dump(final_model_evaluation_svc.model, \"./models_exports/support_vector_classifier.joblib\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-06T09:56:30.967294Z",
-     "start_time": "2023-06-06T09:56:30.936363Z"
-    }
+    "collapsed": false
    }
   },
   {
