--- a/check_high_levarage_points.ipynb
+++ b/check_high_levarage_points.ipynb
@@ -2,53 +2,56 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-06-07T22:40:32.189157Z",
+     "start_time": "2023-06-07T22:40:29.595488Z"
+    }
    },
    "outputs": [],
    "source": [
     "from yellowbrick.regressor import CooksDistance\n",
-    "from yellowbrick.regressor.influence import cooks_distance\n",
+    "from yellowbrick.regressor import cooks_distance\n",
     "from utils import TransactionDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "data = TransactionDataset().get_training_test_split()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-07T22:40:42.326937Z",
+     "start_time": "2023-06-07T22:40:41.886790Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "data.TRAINING.predictors.pop(\"Customer_Type\")\n",
     "data.TRAINING.predictors.pop(\"SpecificHoliday\")\n",
-    "data.TRAINING.predictors.pop(\"Weekday\")"
+    "data.TRAINING.predictors.pop(\"Weekday\");"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-07T22:40:43.025905Z",
+     "start_time": "2023-06-07T22:40:43.020521Z"
+    }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -57,23 +60,21 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": "<Axes: title={'center': \"Cook's Distance Outlier Detection\"}, xlabel='instance index', ylabel='influence (I)'>"
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "visualizer = CooksDistance()\n",
-    "visualizer.fit(data.TRAINING.predictors, data.TRAINING.outcome)\n",
-    "visualizer.show()"
+    "cooks_distance(\n",
+    "    data.TRAINING.predictors,\n",
+    "    data.TRAINING.outcome,\n",
+    "    draw_threshold=True,\n",
+    ");"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-08T01:07:08.942995Z",
+     "start_time": "2023-06-08T01:07:08.331486Z"
+    }
    }
   },
   {
