adding distance metric type for knn and adding black to dev packages.

--- a/model_knn.ipynb
+++ b/model_knn.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:14.402804Z",
-     "start_time": "2023-06-06T09:24:13.526442Z"
+     "end_time": "2023-06-08T20:28:30.673176Z",
+     "start_time": "2023-06-08T20:28:29.652119Z"
     }
    },
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -48,8 +48,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:51:45.263791Z",
-     "start_time": "2023-06-06T09:51:45.260925Z"
+     "end_time": "2023-06-08T20:28:30.871797Z",
+     "start_time": "2023-06-08T20:28:30.676019Z"
     }
    }
   },
@@ -63,8 +63,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.519Z",
-     "start_time": "2023-06-06T09:24:14.575501Z"
+     "end_time": "2023-06-08T20:28:32.723664Z",
+     "start_time": "2023-06-08T20:28:30.872682Z"
     }
    }
   },
@@ -106,8 +106,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.526303Z",
-     "start_time": "2023-06-06T09:24:15.524240Z"
+     "end_time": "2023-06-08T20:28:32.733665Z",
+     "start_time": "2023-06-08T20:28:32.730370Z"
     }
    }
   },
@@ -123,8 +123,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.532998Z",
-     "start_time": "2023-06-06T09:24:15.529865Z"
+     "end_time": "2023-06-08T20:28:32.738854Z",
+     "start_time": "2023-06-08T20:28:32.734997Z"
     }
    }
   },
@@ -139,8 +139,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.538119Z",
-     "start_time": "2023-06-06T09:24:15.535522Z"
+     "end_time": "2023-06-08T20:28:32.743681Z",
+     "start_time": "2023-06-08T20:28:32.740228Z"
     }
    }
   },
@@ -155,8 +155,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.544867Z",
-     "start_time": "2023-06-06T09:24:15.539809Z"
+     "end_time": "2023-06-08T20:28:32.752668Z",
+     "start_time": "2023-06-08T20:28:32.744786Z"
     }
    }
   },
@@ -177,14 +177,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.551048Z",
-     "start_time": "2023-06-06T09:24:15.544378Z"
+     "end_time": "2023-06-08T20:28:32.753040Z",
+     "start_time": "2023-06-08T20:28:32.749981Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "outputs": [],
    "source": [
     "column_transformation_tune = {\n",
@@ -226,33 +226,39 @@
     "knn__weights = {\"knn__weights\": [\"uniform\", \"distance\"],\n",
     "}\n",
     "\n",
+    "knn_power = {\n",
+    "    \"knn__p\": [1, 2]\n",
+    "}\n",
+    "\n",
     "tuning_params_1 = (\n",
     "        column_transformation_tune |\n",
     "        over_sampling_tuning |\n",
     "        over_sampling__sampling_strategy_tuning |\n",
     "        under_sampling_tuning |\n",
     "        knn__n_neighbors_tuning |\n",
-    "        knn__weights\n",
+    "        knn__weights |\n",
+    "        knn_power\n",
     ")\n",
     "\n",
     "tuning_params_2 = (\n",
     "        column_transformation_tune |\n",
     "        under_sampling_tuning |\n",
     "        knn__n_neighbors_tuning |\n",
-    "        knn__weights\n",
+    "        knn__weights |\n",
+    "        knn_power\n",
     ")"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:15.555577Z",
-     "start_time": "2023-06-06T09:24:15.551895Z"
+     "end_time": "2023-06-08T20:29:38.421524Z",
+     "start_time": "2023-06-08T20:29:38.412723Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
@@ -265,14 +271,15 @@
       "                                                             '0.6', '0.8',\n",
       "                                                             '1']]),\n",
       "                                 ['SpecificHoliday']),\n",
-      "                                ('robustscaler', RobustScaler(),\n",
-      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x13dc9b4c0>)]),\n",
-      "    'knn__n_neighbors': 21,\n",
+      "                                ('powertransformer', PowerTransformer(),\n",
+      "                                 <sklearn.compose._column_transformer.make_column_selector object at 0x1353cf370>)]),\n",
+      "    'knn__n_neighbors': 19,\n",
+      "    'knn__p': 1,\n",
       "    'knn__weights': 'uniform',\n",
-      "    'over_sampling': SMOTE(random_state=123, sampling_strategy=0.6),\n",
-      "    'over_sampling__sampling_strategy': 0.6,\n",
+      "    'over_sampling': ADASYN(random_state=123, sampling_strategy=0.3),\n",
+      "    'over_sampling__sampling_strategy': 0.3,\n",
       "    'under_sampling': TomekLinks()}\n",
-      "Best parameter (CV score: 0.612):\n"
+      "Best parameter (CV score: 0.630):\n"
      ]
     }
    ],
@@ -293,21 +300,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:20.815046Z",
-     "start_time": "2023-06-06T09:24:15.556611Z"
+     "end_time": "2023-06-08T20:29:45.546971Z",
+     "start_time": "2023-06-08T20:29:39.170784Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
-      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.150899\n1                              score_time mean score  0.113099\n2                      5-fold CV F1 Score mean score  0.611603\n3                      5-fold CV Accuracy mean score  0.851189\n4             5-fold CV Balanced Accuracy mean score  0.809837\n5  5-fold CV Matthew's Correlation Coefficient me...  0.537465",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.150899</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.113099</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.611603</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.851189</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.809837</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.537465</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "                             Metric for Training Set     Score\n0                                fit_time mean score  0.273070\n1                              score_time mean score  0.156337\n2                      5-fold CV F1 Score mean score  0.629626\n3                      5-fold CV Accuracy mean score  0.874334\n4             5-fold CV Balanced Accuracy mean score  0.796592\n5  5-fold CV Matthew's Correlation Coefficient me...  0.557510",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Training Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>fit_time mean score</td>\n      <td>0.273070</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>score_time mean score</td>\n      <td>0.156337</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>5-fold CV F1 Score mean score</td>\n      <td>0.629626</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>5-fold CV Accuracy mean score</td>\n      <td>0.874334</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5-fold CV Balanced Accuracy mean score</td>\n      <td>0.796592</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>5-fold CV Matthew's Correlation Coefficient me...</td>\n      <td>0.557510</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 11,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,21 +330,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:22.161190Z",
-     "start_time": "2023-06-06T09:24:20.817718Z"
+     "end_time": "2023-06-08T20:29:50.232431Z",
+     "start_time": "2023-06-08T20:29:48.060206Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "outputs": [
     {
      "data": {
-      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.609626\n1                           Accuracy  0.850471\n2                  Balanced Accuracy  0.731997\n3  Matthew's Correlation Coefficient  0.534584",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.609626</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.850471</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.731997</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.534584</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "              Metric for Testing Set     Score\n0                           F1 Score  0.649123\n1                           Accuracy  0.885293\n2                  Balanced Accuracy  0.780928\n3  Matthew's Correlation Coefficient  0.581465",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Metric for Testing Set</th>\n      <th>Score</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>F1 Score</td>\n      <td>0.649123</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Accuracy</td>\n      <td>0.885293</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Balanced Accuracy</td>\n      <td>0.780928</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Matthew's Correlation Coefficient</td>\n      <td>0.581465</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 12,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -348,33 +355,33 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:22.567974Z",
-     "start_time": "2023-06-06T09:24:22.166964Z"
+     "end_time": "2023-06-08T20:29:50.787517Z",
+     "start_time": "2023-06-08T20:29:50.235091Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:24:22.573235Z",
-     "start_time": "2023-06-06T09:24:22.569814Z"
+     "end_time": "2023-06-08T20:29:50.791392Z",
+     "start_time": "2023-06-08T20:29:50.788172Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "outputs": [
     {
      "data": {
       "text/plain": "['./models_exports/knn_classifier.joblib']"
      },
-     "execution_count": 14,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,8 +392,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-06T09:52:40.237598Z",
-     "start_time": "2023-06-06T09:52:40.217545Z"
+     "end_time": "2023-06-08T20:29:50.834537Z",
+     "start_time": "2023-06-08T20:29:50.794830Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-08T20:28:59.750653Z",
+     "start_time": "2023-06-08T20:28:59.744476Z"
     }
    }
   },
